@@ -21,6 +21,15 @@ cloud_config_modules:
  - runcmd
  - byobu
 
+cloud_final_modules:
+ - scripts-per-once
+ - scripts-per-boot
+ - scripts-per-instance
+ - scripts-user
+ - keys-to-console
+ - phone-home
+ - final-message
+
 ## logging.cfg contains info on logging output for cloud-init
 #include logging.cfg
 
