@@ -1,0 +1,10 @@
+# cloud-final.conf - run "final" jobs
+# this runs around traditional "rc.local" time.
+# and after all cloud-config jobs are run
+description "execute cloud user/final scripts"
+
+start on (stopped rc RUNLEVEL=[2345] and stopped cloud-config)
+console output
+task
+
+exec cloud-init-cfg all cloud_final
